--- a/estilos.css
+++ b/estilos.css
@@ -2,3 +2,16 @@
   margin 0;
   padding: 0;
 }
+footer{
+  background-color: rgba(1, 36, 66, 0.729);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.menu {
+  list-style: none;
+}
+.menu a{
+  text-decoration: none;
+  color: aliceblue;
+}
