--- a/estilos.css
+++ b/estilos.css
@@ -12,6 +12,10 @@ header{
 .navegador a{
   color: aliceblue;
 }
+.carousel-inner img{
+  width: 100%;
+  max-height: 500px;
+}
 footer{
   background-color: rgba(1, 36, 66, 0.729);
   display: flex;
