--- a/estilos.css
+++ b/estilos.css
@@ -16,6 +16,20 @@ header{
   width: 100%;
   max-height: 500px;
 }
+.card{
+  img{
+    height: 170px;
+    object-fit: cover;
+  }
+}
+.btn-propio{
+  background-color: rgba(1, 36, 66, 0.729);
+  color: aliceblue;
+}
+.btn-propio:hover{
+  background-color: rgba(1, 36, 66, 0.729);
+  color: aliceblue;
+}
 footer{
   background-color: rgba(1, 36, 66, 0.729);
   display: flex;
